fix(console): fix domain items vertical spacing in get-started page (#5362)

--- a/packages/console/src/pages/GetStarted/ProtectedAppCreationForm/index.module.scss
+++ b/packages/console/src/pages/GetStarted/ProtectedAppCreationForm/index.module.scss
@@ -31,7 +31,7 @@
     .list {
       display: flex;
       flex-wrap: wrap;
-      gap: _.unit(8);
+      gap: _.unit(3) _.unit(8);
     }
 
     .app {
